--- a/app/src/main/res/layout/send_crypto_asset_external.xml
+++ b/app/src/main/res/layout/send_crypto_asset_external.xml
@@ -2,21 +2,25 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SendCryptoAssetActivity"
     android:paddingStart="20dp"
-    android:paddingEnd="20dp">
+    android:paddingEnd="20dp"
+    android:layout_gravity="center">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_gravity="center">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/scanWithCamera"
@@ -37,7 +41,7 @@
                 />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/addressToSendInputLayout"
+                android:id="@+id/externalAddressToSendInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -48,7 +52,7 @@
                 android:hint="@string/address">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/addressToSendInput"
+                    android:id="@+id/externalAddressToSendInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textNoSuggestions|textVisiblePassword"
@@ -60,18 +64,18 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/amountToSendInputLayout"
+                android:id="@+id/externalAmountToSendInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/addressToSendInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/externalAddressToSendInputLayout"
                 style="@style/TextInputLayoutStyle"
                 android:hint="@string/amount_to_send">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/amountToSendInput"
+                    android:id="@+id/externalAmountToSendInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
@@ -82,12 +86,37 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/send"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/externalpaymetIdInputInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/amountToSendInputLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/externalAmountToSendInputLayout"
+                style="@style/TextInputLayoutStyle"
+                android:hint="@string/payment_id_or_destination_tag"
+                android:visibility="gone">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/externalpaymetIdInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:maxLines="1"
+                    android:textColor="@color/blueGreyD2"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/sendExternal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/externalpaymetIdInputInputLayout"
                 android:background="@drawable/login_button"
                 android:theme="@style/AppTheme"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
