--- a/app/src/main/res/layout/send_crypto_asset_internal.xml
+++ b/app/src/main/res/layout/send_crypto_asset_internal.xml
@@ -2,11 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SendCryptoAssetActivity"
     android:paddingStart="20dp"
-    android:paddingEnd="20dp">
+    android:paddingEnd="20dp"
+    android:layout_gravity="center">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
