--- a/app/src/main/res/layout/send_crypto_asset_external.xml
+++ b/app/src/main/res/layout/send_crypto_asset_external.xml
@@ -19,110 +19,118 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center">
+            android:paddingTop="0dp">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/scanWithCamera"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_btn"
-                app:backgroundTint="@color/colorAccent"
-                android:drawableStart="@drawable/ic_crop_free"
-                android:text="@string/scan_with_camera"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="5dp"
-                android:padding="10dp"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:drawablePadding="10dp"
-                />
+                app:layout_constraintBottom_toBottomOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/externalAddressToSendInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/scanWithCamera"
-                style="@style/TextInputLayoutStyle"
-                android:hint="@string/address">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/externalAddressToSendInput"
-                    android:layout_width="match_parent"
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/scanWithCamera"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="textNoSuggestions|textVisiblePassword"
-                    android:maxLines="1"
-                    android:textColor="@color/blueGreyD2"
-                   />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/externalAmountToSendInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/externalAddressToSendInputLayout"
-                style="@style/TextInputLayoutStyle"
-                android:hint="@string/amount_to_send">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/externalAmountToSendInput"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:textColor="@color/blueGreyD2"
+                    android:background="@drawable/rounded_btn"
+                    app:backgroundTint="@color/colorAccent"
+                    android:drawableStart="@drawable/ic_crop_free"
+                    android:text="@string/scan_with_camera"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_margin="5dp"
+                    android:layout_marginTop="0dp"
+                    android:padding="10dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:drawablePadding="10dp"
                     />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/externalpaymetIdInputInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/externalAmountToSendInputLayout"
-                style="@style/TextInputLayoutStyle"
-                android:hint="@string/payment_id_or_destination_tag"
-                android:visibility="gone">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/externalpaymetIdInput"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/externalAddressToSendInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:textColor="@color/blueGreyD2"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/scanWithCamera"
+                    style="@style/TextInputLayoutStyle"
+                    android:hint="@string/address">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/externalAddressToSendInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textNoSuggestions|textVisiblePassword"
+                        android:maxLines="1"
+                        android:textColor="@color/blueGreyD2"
+                       />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/externalAmountToSendInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/externalAddressToSendInputLayout"
+                    style="@style/TextInputLayoutStyle"
+                    android:hint="@string/amount_to_send">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/externalAmountToSendInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:maxLines="1"
+                        android:textColor="@color/blueGreyD2"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/externalpaymetIdInputInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/externalAmountToSendInputLayout"
+                    style="@style/TextInputLayoutStyle"
+                    android:hint="@string/payment_id_or_destination_tag"
+                    android:visibility="gone">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/externalpaymetIdInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:maxLines="1"
+                        android:textColor="@color/blueGreyD2"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/externalSendBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/externalpaymetIdInputInputLayout"
+                    android:background="@drawable/login_button"
+                    android:theme="@style/AppTheme"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:textColor="@color/blueGreyL5"
+                    android:text="@string/send"
                     />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/sendExternal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/externalpaymetIdInputInputLayout"
-                android:background="@drawable/login_button"
-                android:theme="@style/AppTheme"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:textColor="@color/blueGreyL5"
-                android:text="@string/send"
-                />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
