--- a/app/src/main/res/layout/send_crypto_asset_internal.xml
+++ b/app/src/main/res/layout/send_crypto_asset_internal.xml
@@ -11,72 +11,93 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_gravity="center">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
-            android:layout_marginTop="30dp">
+            android:padding="10dp">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/reciepientEmailInputLayout"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                style="@style/TextInputLayoutStyle"
-                android:hint="@string/receipient_email_address">
+                app:layout_constraintBottom_toBottomOf="parent">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/reciepientEmailInput"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/freeTxMsg"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="textWebEmailAddress"
-                    android:maxLines="1"
-                    android:textColor="@color/blueGreyD2"
+                    android:text="@string/free_internal_tx"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14sp"
                     />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/amountToSendInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/reciepientEmailInputLayout"
-                style="@style/TextInputLayoutStyle"
-                android:hint="@string/amount_to_send">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/amountToSendInput"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/internalReciepientEmailInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:textColor="@color/blueGreyD2"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/freeTxMsg"
+                    style="@style/TextInputLayoutStyle"
+                    android:hint="@string/receipient_email_address">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/internalReciepientEmailInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textWebEmailAddress"
+                        android:maxLines="1"
+                        android:textColor="@color/blueGreyD2"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/internalAmountToSendInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/internalReciepientEmailInputLayout"
+                    style="@style/TextInputLayoutStyle"
+                    android:hint="@string/amount_to_send">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/internalAmountToSendInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:maxLines="1"
+                        android:textColor="@color/blueGreyD2"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/internalSendBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/internalAmountToSendInputLayout"
+                    android:background="@drawable/login_button"
+                    android:theme="@style/AppTheme"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:textColor="@color/blueGreyL5"
+                    android:text="@string/send"
                     />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/send"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/amountToSendInputLayout"
-                android:background="@drawable/login_button"
-                android:theme="@style/AppTheme"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:textColor="@color/blueGreyL5"
-                android:text="@string/send"
-                />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
